--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,7 +15,7 @@
         <tr>
           <td><%= shortURL %></td>
           <td><%= longURL %></td>
-          <td><a href="http://www.lighthouselabs.ca">Link</a></td>
+          <td><%- `<a href=/u/${shortURL}>Link</a>` %></td>
         </tr>
 
       </table>
