--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:20px; padding:50px;">
+  <head>
     <% include partials/_header %>
+  </head>
+  <body style="font-size:20px; padding:50px;">
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
