add form to update existing url

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,8 +18,8 @@
             <td><%= `/u/${url}` %></td>
             <td><%- `<a href=/u/${url}>Link</a>` %></td>
             <td>
-              <%- `<form action=/urls/${url}/delete method="POST"` %>
-                <label for="shortURL" ></label>
+                <form action=/urls/<%= url %>/delete method="POST"%>
+                <label for="shortURL" class="hidden-label">Delete</label>
                 <button id="shortURL" type="submit" name="shortURL" <% `value=${url}` %> >Delete</button>
               </form>
             </td>
