--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -3,11 +3,14 @@
   <head>
     <% include partials/_header %>
   </head>
-  <body style="font-size:20px; padding:50px;">
-    <form action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
-    </form>
+  <body>
+    <% include ./partials/_nav-top.ejs %>
+    <div id="main-container-mid">
+      <form action="/urls" method="POST" style="margin:150px;">
+        <label for="longURL">Enter a URL:</label>
+        <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
+        <input type="submit" value="Submit">
+      </form>
+    </div>
   </body>
 </html>
