--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,7 +17,7 @@
             <td><%- `<a href=/u/${url}>${urls[url]}</a>` %></td>
             <td class="edit-td"><%- `<a href=/urls/${url}>Edit</a>` %></td>
             <td>
-                <form action=/urls/<%= url %>/delete method="POST"%>
+                <form action=/urls/<%= url %>/delete method="POST">
                 <label for="shortURL" aria-label="Delete"></label>
                 <button id="shortURL" class="styled-button" type="submit" name="shortURL" <% `value=${url}` %> >Delete</button>
               </form>
