--- a/views/partials/_nav-top.ejs
+++ b/views/partials/_nav-top.ejs
@@ -1,3 +1,13 @@
 <div id="top-bar">
-  <a class="white-link" href="/urls" >TinyApp</a>
+  <div id="title-container">
+    <a class="white-link" href="/urls" >TinyApp</a>
+  </div>
+
+  <div id="login-form-container">
+    <form id="login-form" action="/login" method="post">
+      <label for="username" aria-label="username"></label>
+        <input type="text" name="username" placeholder="username"></form>
+        <input id="login-button" class="styled-button" type="submit" value="Login">
+    </form>
+  </div>
 </div>
