--- a/public/main-style.css
+++ b/public/main-style.css
@@ -35,10 +35,13 @@ a{
 }
 
 #top-bar{
+  height:75px;
+  position:relative;
   width:calc(100% -20px);
   background:#00003f;
-  text-align:center;
-  vertical-align:middle;
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
   font-size:35px;
   padding:10px;
   font-family:Helvetica;
@@ -94,4 +97,18 @@ a{
 
 .bold-url{
   font-weight:black;
+}
+
+#title-container{
+
+}
+
+#login-form-container{
+  position:absolute;
+  right:10px;
+  top:0px;
+}
+
+#login-button{
+  margin-auto;
 }
