rename templates and add login cookies

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,2 +1,13 @@
-<title> TinyApp || Lighthouse Labs Project </title>
-<link rel="stylesheet" type="text/css" href="/main-style.css">
+<div id="top-bar">
+  <div id="title-container">
+    <a class="white-link" href="/urls" >TinyApp</a>
+  </div>
+
+  <div id="login-form-container">
+    <form id="login-form" action="/login" method="post">
+      <label for="username" aria-label="username"></label>
+        <input type="text" name="username" placeholder="username">
+        <input id="login-button" class="styled-button" type="submit" value="Login">
+    </form>
+  </div>
+</div>
