--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include partials/_header %>
+    <% include partials/_head %>
   </head>
   <body>
-    <% include ./partials/_nav-top.ejs %>
+    <% include ./partials/_header.ejs %>
     <div id="main-container-mid">
       <form action="/urls" method="POST" style="margin:150px;">
         <label for="longURL">Enter a URL:</label>
