--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <% include ./partials/_header.ejs %>
+    <% include ./partials/_head.ejs %>
   </head>
   <body>
-    <% include ./partials/_nav-top.ejs %>
+    <% include ./partials/_header.ejs %>
     <div id="main-container-mid">
       <div>
         <table>
