--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -6,11 +6,13 @@
   <body>
     <% include ./partials/_header.ejs %>
     <div id="main-container-mid">
-      <form action="/urls" method="POST" style="margin:150px;">
-        <label for="longURL">Enter a URL:</label>
-        <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-        <input type="submit" value="Submit">
-      </form>
+      <div>
+        <form action="/urls" method="POST">
+          <label for="longURL">Enter a URL:</label>
+          <input id="longURL" type="text" name="longURL" placeholder="http://">
+          <input type="submit" class="styled-button" value="Submit">
+        </form>
+      </div>
     </div>
   </body>
 </html>
