--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,8 +14,8 @@
           <div id="sign-up">
             Sign Up
           </div>
-          <label for="username" aria-label="username"></label>
-          <input id="username" class="block-input-field" type="text" name="username" placeholder="username">
+          <label for="email" aria-label="email"></label>
+          <input id="email" class="block-input-field" type="text" name="email" placeholder="email address">
           <label for="password" aria-label="password"></label>
           <input id="password" class="block-input-field" type="password" name="password" placeholder="password">
           <input type="submit" id="register-button" class="styled-button" value="Register">
