--- a/public/main-style.css
+++ b/public/main-style.css
@@ -42,7 +42,7 @@ a{
   flex-direction:row;
   justify-content:center;
   font-size:35px;
-  padding:10px;
+  padding:18px;
   font-family:Helvetica;
   min-width:700px;
 }
@@ -102,13 +102,13 @@ a{
 #title-container{
 }
 
-#login-form-container{
+#nav-login-form-container{
   position:absolute;
   right:10px;
   top:0px;
 }
 
-#login-button{
+#nav-login-button{
   margin:auto;
 }
 
