add more login validators, 403 and 404 pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
           <input id="email" class="block-input-field" type="text" name="email" placeholder="email address">
           <label for="password" aria-label="password"></label>
           <input id="password" class="block-input-field" type="password" name="password" placeholder="password">
-          <input type="submit" id="register-button" class="styled-button" value="Register">
+          <input type="submit" id="register-button" class="styled-button" value="Login">
         </form>
       <% } %>
     </div>
