--- a/views/403.ejs
+++ b/views/403.ejs
@@ -7,7 +7,15 @@
     <% include ./partials/_header.ejs %>
 
     <div id="main-container-mid">
-      403 Forbidden
+      <div>
+        <div>
+          403 Forbidden
+        </div>
+
+        <div class="error-div">
+          <a href="/urls">Back to URLs</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
