--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,15 @@
     <% include ./partials/_header.ejs %>
 
     <div id="main-container-mid">
-      404 Not Found
+      <div>
+        <div>
+          404 Not Found
+        </div>
+
+        <div class="error-div">
+          <a href="/urls">Back to URLs</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
