--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,7 +15,7 @@
           </tr>
           <tr>
             <td>
-              <form class="url-show-form" action=/urls/<%- shortURL %> method="POST">
+              <form class="url-show-form" action="/urls/<%- shortURL %>?_method=PUT" method="POST">
                 <label class="url-show-label" for="newLongURL" class="hidden-label">Enter a new URL:</label>
                 <input id="newLongURL" type="text" name="newLongURL" placeholder="<%- longURL %>">
                 <input type="submit" class="styled-button" value="Update">
