--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,17 @@
     <% include ./partials/_header.ejs %>
 
     <div id="main-container-mid">
+      <div id="greeting-container">
+        <div id="greeting-title">
+          Welcome
+        </div>
+        <div id="greeting-link">
+          <a href="/urls">
+            Shorten Some URLs
+          </a>
+        </div>
 
+      </div>
     </div>
   </body>
 </html>
