--- a/public/main-style.css
+++ b/public/main-style.css
@@ -92,6 +92,7 @@ a{
   display:flex;
   flex-direction:row;
   justify-content:center;
+  flex-wrap:wrap;
 }
 
 
@@ -144,6 +145,34 @@ a{
 
 .url-show-label{
   display:block;
+}
+
+#analytics-container{
+  width:100%;
+  display:flex;
+  flex-direction:row;
+  justify-content:center;
+  align-content:flex-start;
+}
+
+#analytics-mid{
+
+}
+
+#analytics-table{
+  margin-top:15px;
+  border-collapse: collapse;
+  text-align:left;
+  vertical-align:middle;
+}
+
+.analytics-table-heading{
+  padding:4px 10px 4px 10px;
+  border-bottom:solid black 1px;
+}
+
+.timestamp-td{
+  width:300px;
 }
 
 #newLongURL{
