--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -57,7 +57,7 @@
               <td></td>
               <td></td>
               <td></td>
-              <td><button id="add-url-button" class="styled-button"><a href="/urls/new">Add URL</a></button></td>
+              <td><a href="/urls/new"><button id="add-url-button" class="styled-button">Add URL</button></a></td>
             </tr>
         </table>
       <% } %>
