fix redirect message at /login when already logged in

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
 
     <div id="main-container-mid">
       <% if( user_id ){ %>
-        Please logout before creating a new account
+        Already logged in!
       <% } else { %>
         <form action="/login" method="POST">
           <div id="sign-up">
